<resources>
    <string name="app_name">Rogrows</string>
    <string name="title_activity_dashboard">@string/app_name</string>

    <string name="facebook_app_id">792790751337303</string>
    <string name="fb_login_protocol_scheme">fb792790751337303</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login_or_sign_up">Login       or      Sign Up</string>
    <string name="currency">\u20B9</string>
    <string name="db">DB</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="gobinto">Gr</string>
    <string name="welcome_to">Welcome to Rogrows</string>
    <string name="contact">Contact</string>
    <string name="address">Lucknow</string>
    <string name="days_returns">Return at delivery time</string>
    <array name="reasonsforcancellation">
        <item>Select a reason</item>
        <item>Product not required</item>
        <item>I am out of city</item>
        <item>Cheaper alternative available</item>
        <item>Review from friends/relatives</item>
    </array>

    <string name="location_api_key_id">AIzaSyCfKKl5LsMfeU2M7-lqCf2qWoNC0rYpilg</string>
    <string name="razor_api_key">rzp_live_7jYBSMJTDRxcZK0</string>

    <string name="err_msg_mobile">Please Enter Your Mobile No.</string>
    <string name="err_msg_otp">Please Enter a Valid Otp</string>
    <string name="err_msg_mobile_length">Please Enter Your Mobile No.of 10 Digits.</string>
    <string name="err_msg_pass">Please Enter Your Password.</string>
    <string name="my_wallet_amount">My Wallet Amount</string>
    <string name="recharge_wallet">Recharge Wallet</string>
    <string name="tagline">  </string>
    <string name="payumoney_key">oXp4WsMJ0</string>
    <string name="payumoney_firstname">firstname</string>
    <string name="payumoney_email">email</string>
    <string name="salt">XV2FAmcfQ10</string>
    <string name="merchant_ID">72689850</string>
    <string name="trend">A glimpse of our consumer favorites to give you an insight of our inventory &amp; ingredients as you decide on your favorite.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_new">NEW</string>
    <string name="unselected">unselected</string>
    <string name="selected">selected</string>
    <string name="view_all">VIEW ALL</string>

    <!--order status-->
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="pending">Holded</string>
    <string name="all">All</string>
    <string name="accepted">Received</string>
    <string name="delivered">Delivered</string>
    <string name="completed">Completed</string>
    <string name="rejected">Cancelled</string>
    <string name="returned">Returned</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add">Add</string>

    <string-array name="orderstatus">
        <item name="o1">Recieved</item>
        <item name="o2">Delivered</item>
        <item name="o3">Holded</item>
        <item name="o4">Assigned</item>
        <item name="o5">Cancelled</item>
        <item name="o6">Returned</item>
    </string-array>
</resources>
