<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUsActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                app:cardElevation="@dimen/_20sdp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="140dp"
                    android:scaleType="centerInside"
                    android:layout_gravity="center"
                    android:layout_height="140dp"
                    android:src="@drawable/logo"/>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#fff"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/tagline"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="12sp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:onClick="back"
            android:tint="@android:color/white"
            android:src="@drawable/ic_chevron_left_black_24dp"
            tools:ignore="ContentDescription" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_height="80dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="@dimen/_20sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="290dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:weightSum="5">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:onClick="whatsapp"
                        android:src="@drawable/ic_whatsapp"
                        />

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:onClick="facebook"
                        android:src="@drawable/ic_facebook"
                        />

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:onClick="instagram"
                        android:src="@drawable/ic_instagram"
                        />

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_twitter"
                        android:onClick="twitter"/>

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_linkedin"
                        android:onClick="linkedin"/>

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_youtube"
                        android:onClick="youtube"/>

                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <!--Contact Details-->

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:cardElevation="@dimen/_20sdp"
            android:layout_below="@id/cardview"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="@dimen/_32sdp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circularbordersolid"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact"
                        android:textSize="17sp"
                        android:fontFamily="@font/proximanovaregular"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Edit"
                        android:visibility="gone"
                        android:textColor="#FFCF66"
                        android:layout_marginEnd="10dp"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingEnd="8dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/circular_grey_bordersolid"
                            android:padding="10dp"
                            android:src="@drawable/ic_call_24dp"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/UserMobile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="+91"
                            android:textSize="15sp"
                            android:autoLink="phone"
                            android:textColor="@color/material_blue_grey_95"
                            android:fontFamily="@font/proximanovaregular" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_marginTop="10dp"
                        android:paddingEnd="8dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/circular_grey_bordersolid"
                            android:padding="10dp"
                            android:src="@drawable/ic_whatsapp"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="+91"
                            android:textSize="15sp"
                            android:onClick="whatsapp"
                            android:textColor="#23E436"
                            android:fontFamily="@font/proximanovaregular" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:paddingEnd="8dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/circular_grey_bordersolid"
                            android:padding="10dp"
                            android:src="@drawable/ic_email_24dp"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/userEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:textColor="@color/material_blue_grey_95"
                            android:text="http://rogrows.com/panel/"
                            android:textSize="15sp"
                            android:autoLink="email"
                            android:fontFamily="@font/proximanovaregular" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:paddingEnd="8dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/circular_grey_bordersolid"
                            android:padding="10dp"
                            android:src="@drawable/ic_baseline_my_location_24"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:textColor="@color/material_blue_grey_95"
                            android:text="@string/address"
                            android:textSize="15sp"
                            android:autoLink="map"
                            android:fontFamily="@font/proximanovaregular" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:paddingEnd="8dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/circular_grey_bordersolid"
                            android:padding="10dp"
                            android:src="@drawable/ic_baseline_web_24"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:textColor="@color/material_blue_grey_95"
                            android:text="http://rogrows.com/panel/"
                            android:textSize="15sp"
                            android:autoLink="web"
                            android:fontFamily="@font/proximanovaregular" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>



</androidx.core.widget.NestedScrollView>